[tool.poetry]
name = "easy-bot"
version = "0.1.0"
description = "A very easy bot!"
authors = ["Rohith04MVK <007rohitjj04@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "easy_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
